Guia acabada a falta del paso del Acerca de..., easterEgg acabados. Modificados los Layout para que el cambio de movil a uno con pantalla pequeña no evite su funcionamiento

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,4 +58,7 @@
     <include
         android:id="@+id/includeResumen"
         layout="@layout/guia_resumen" />
+    <include
+        android:id="@+id/includeFuego"
+        layout="@layout/fuego" />
 </RelativeLayout>
