--- a/app/src/main/res/layout/guia_resumen.xml
+++ b/app/src/main/res/layout/guia_resumen.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/guiarResumen"
+    android:id="@+id/guiaResumen"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,62 +14,46 @@
         style="@style/titulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/bienvenido"
+        android:text="@string/resumen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imgSpyro" />
+        app:layout_constraintTop_toBottomOf="@+id/imgLogo"/>
 
     <TextView
         android:id="@+id/text1"
-        style="@style/texto_Normal"
+        style="@style/texto_Resumen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/texto1"
+        android:text="@string/textoResumen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titulo" />
-
-    <ImageView
-        android:id="@+id/imgSpyro"
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/spyro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/titulo"
+        app:layout_constraintBottom_toTopOf="@+id/conjuntoBoton"/>
 
     <ImageView
         android:id="@+id/imgLogo"
         android:layout_width="match_parent"
         android:layout_height="140dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text1" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/text2"
-        style="@style/texto_Normal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/texto2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/boton_comenzar"
+        android:id="@+id/conjuntoBoton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text2">
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <ImageButton
+        <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:contentDescription="Comenzar la guia"
             android:scaleType="centerCrop"
             android:src="@drawable/img_boton"
             android:background="@android:color/transparent"
@@ -78,21 +62,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <android.widget.Button
-            android:id="@+id/prueba"
-            style="@style/exit_guide"
-            android:text="@string/comenzar"
+            android:id="@+id/boton_cerrar"
+            style="@style/comenzar"
+            android:text="@string/cerrar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <android.widget.Button
-        android:id="@+id/exit_guide"
-        style="@style/exit_guide"
-        android:text="@string/exit_guide"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/boton_comenzar"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
